deploy: 1759eba90ac40e55aeaf0dfcf91a2020cba98280

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<!doctype html><html lang=en><head><meta name=generator content="Hugo 0.85.0"><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1 crossorigin=anonymous><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/github-markdown-css@3.0.1/github-markdown.min.css><title>Mikirihassha P Official 2021~</title></head><body style=width:100%!important><div class="container ms-auto me-auto"><header class=row><a class="text-reset ps-0" href=https://mi-ki-ri.github.io/official2021/><h1 class="p-2 ps-0 text-reset">Mikirihassha P Official 2021~</h1></a><h2 class="p-2 fs-6">Music, Book, Songwriting</h2></header><main class="row gt-5"><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/info>【info】</a></span>
-<a href=https://mi-ki-ri.github.io/official2021/posts/2021-11-15-01-hello/>HELLO</a>
-<span class="text-black-50 fs-6">2021-11-15</span></h3><section style=min-height:1rem class=text-truncate>作成途中だけどどうなるかな。</section><section>Tags:
-<a href=https://mi-ki-ri.github.io/official2021/tags/info>info</a></section></article><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/music>【music】</a></span>
+<!doctype html><html lang=en><head><meta name=generator content="Hugo 0.85.0"><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1 crossorigin=anonymous><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/github-markdown-css@3.0.1/github-markdown.min.css><title>Mikirihassha P Official 2021~</title></head><body style=width:100%!important><div class="container ms-auto me-auto"><header class=row><a class="text-reset ps-0" href=https://mi-ki-ri.github.io/official2021/><h1 class="p-2 ps-0 text-reset">Mikirihassha P Official 2021~</h1></a><h2 class="p-2 fs-6">Music, Book, Songwriting</h2></header><main class="row gt-5"><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/idea>【idea】</a></span>
+<a href=https://mi-ki-ri.github.io/official2021/posts/2021-11-16-02-desumasu/>ですます調を見直そうと思う</a>
+<span class="text-black-50 fs-6">2021-11-16</span></h3><section style=min-height:1rem class=text-truncate>ですます調を見直そうと思う 最近はですます調を見直しています。
+印象が違う やっぱり与える印象の違いがあります。
+ですます調は柔らかく、だ・である調は固い。
+漢字と平仮名 これは漢字と平仮名の関係に似ています。
+漢字は固く、平仮名は柔らかい。
+平家物語と源氏物語 「漢字」な平家物語と、「平仮名」な源氏物語という比較もできます。
+柔らかい言葉を 自分の場合、文章自体が固くなりがちなので、語尾で柔らかさを演出できたらなと思うのです。
+あと、はっぴいえんどの影響もありますね。</section><section>Tags:
+<a href=https://mi-ki-ri.github.io/official2021/tags/idea-text>idea-text</a></section></article><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/music>【music】</a></span>
 <a href=https://mi-ki-ri.github.io/official2021/posts/2021-11-16-03-i-want-headphone/>ヘッドフォンがほしい</a>
-<span class="text-black-50 fs-6">0001-01-01</span></h3><section style=min-height:1rem class=text-truncate>ヘッドフォンがほしい 最近Macをクリーンインストールするなど、環境を整えなおしています。
+<span class="text-black-50 fs-6">2021-11-16</span></h3><section style=min-height:1rem class=text-truncate>ヘッドフォンがほしい 最近Macをクリーンインストールするなど、環境を整えなおしています。
 その流れで古いモニターヘッドフォンを発見し、作りかけのプロジェクトで試してみたら、散々なミックス具合に聞こえてしまう。
 でもヘッドフォンが悪いのか（古いので）、ミックスが悪いのか分からない状態なのです。
 信頼できるリスニング環境は大事だなと思った次第。
@@ -13,4 +20,19 @@
 SONYの有名なやつもいいですが、今興味があるのはAudio Technica。
 あとで電気屋さんに行ってみよう。</section><section>Tags:
 <a href=https://mi-ki-ri.github.io/official2021/tags/music>music</a>
-<a href=https://mi-ki-ri.github.io/official2021/tags/music-equipment>music-equipment</a></section></article></main><footer class="row border-top mt-4 p-4"><p>Copyright &copy; Mikirihassha P 2021~<br><address>mi.ki.ri.hassha.p@gmail.com</address></p><div class=row><section class=col-6><h2>カテゴリ一覧</h2><ul class="list-group list-group-horizontal"><li class=list-group-item><a href=/official2021/categories/info>info</a> (1)<li class=list-group-item><a href=/official2021/categories/music>music</a> (1)</ul></section><section class=col-6><h2>タグ一覧</h2><ul class="list-group list-group-horizontal"><li class=list-group-item><a href=/official2021/tags/info>info</a> (1)<li class=list-group-item><a href=/official2021/tags/music>music</a> (1)<li class=list-group-item><a href=/official2021/tags/music-equipment>music-equipment</a> (1)</ul></section></div></footer><script src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js integrity=sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW crossorigin=anonymous></script></div></body></html>
+<a href=https://mi-ki-ri.github.io/official2021/tags/music-equipment>music-equipment</a></section></article><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/music>【music】</a></span>
+<a href=https://mi-ki-ri.github.io/official2021/posts/2021-11-16-01-three-four/>三拍子と四拍子を相互に変換できるのが不思議</a>
+<span class="text-black-50 fs-6">2021-11-16</span></h3><section style=min-height:1rem class=text-truncate>三拍子と四拍子は相互に変換できる 同じメロディを三拍子にも四拍子にも乗せることができます。
+蛍の光 と 別れのワルツ などが有名です。
+不思議 ですが、これって不思議ですよね。
+三拍子と四拍子は全然違うのに、同じメロディを乗せられる…。
+仮説 強拍 と 弱拍 という概念があります。
+強拍は1拍目で、弱拍はそれ以外（四拍子の3拍目もやや強とする場合があります）。
+1拍目の強拍に向けて、残りの拍が合わせていくという構造は、三拍子も四拍子も共通です。
+この構造とメロディの原理に深い関係があるんじゃないか、と思ったりしました。</section><section>Tags:
+<a href=https://mi-ki-ri.github.io/official2021/tags/music>music</a>
+<a href=https://mi-ki-ri.github.io/official2021/tags/music-rhythm>music-rhythm</a>
+<a href=https://mi-ki-ri.github.io/official2021/tags/music-melody>music-melody</a></section></article><article class="bg-light shadow-sm round col-6 p-3 pt-5 my-3" style=height:150px><h3 class="fs-6 text-truncate border-bottom"><span class=fs-6><a href=https://mi-ki-ri.github.io/official2021/categories/info>【info】</a></span>
+<a href=https://mi-ki-ri.github.io/official2021/posts/2021-11-15-01-hello/>HELLO</a>
+<span class="text-black-50 fs-6">2021-11-15</span></h3><section style=min-height:1rem class=text-truncate>作成途中だけどどうなるかな。</section><section>Tags:
+<a href=https://mi-ki-ri.github.io/official2021/tags/info>info</a></section></article></main><footer class="row border-top mt-4 p-4"><p>Copyright &copy; Mikirihassha P 2021~<br><address>mi.ki.ri.hassha.p@gmail.com</address></p><div class=row><section class=col-6><h2>カテゴリ一覧</h2><ul class="list-group list-group-horizontal"><li class=list-group-item><a href=/official2021/categories/idea>idea</a> (1)<li class=list-group-item><a href=/official2021/categories/info>info</a> (1)<li class=list-group-item><a href=/official2021/categories/music>music</a> (2)</ul></section><section class=col-6><h2>タグ一覧</h2><ul class="list-group list-group-horizontal"><li class=list-group-item><a href=/official2021/tags/idea-text>idea-text</a> (1)<li class=list-group-item><a href=/official2021/tags/info>info</a> (1)<li class=list-group-item><a href=/official2021/tags/music>music</a> (2)<li class=list-group-item><a href=/official2021/tags/music-equipment>music-equipment</a> (1)<li class=list-group-item><a href=/official2021/tags/music-melody>music-melody</a> (1)<li class=list-group-item><a href=/official2021/tags/music-rhythm>music-rhythm</a> (1)</ul></section></div></footer><script src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js integrity=sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW crossorigin=anonymous></script></div></body></html>
